k8s/database/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: apc-db-ns
---
apiVersion: v1
kind: Namespace
metadata:
  name: apc-backup-ns
---
apiVersion: v1
kind: Namespace
metadata:
  name: apc-striming-ns
---
apiVersion: v1
kind: Namespace
metadata:
  name: admin
